--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,7 +53,7 @@ a:focus, a:active { text-decoration: none; }
 
 .header {
 	width: 100%;
-	background-image: linear-gradient(24deg, var(--color-primary), var(--color-primary-gradient-end));
+	background-image: linear-gradient( to top right, var(--color-primary), var(--color-primary-gradient-end) );
 	color: var(--color-on-primary);
 	text-align: center;
 	padding-top: 1rem;	padding-bottom: 1rem;
